set correct variables for dark mode

--- a/src/resources/formats/revealjs/quarto.scss
+++ b/src/resources/formats/revealjs/quarto.scss
@@ -54,7 +54,7 @@ $code-block-bg: $body-bg !default;
 $code-block-border-color: lighten($body-color, 60%) !default;
 
 // inline code
-$code-color: #9954bb !default;
+$code-color: #4758ab !default;
 $code-bg: $body-bg !default;
 
 // Background of the presentation
